[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Menu/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.341176 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 218.0
margin_top = 143.0
margin_right = 281.0
margin_bottom = 257.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 63.0
margin_bottom = 14.0
text = "PAUSED"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 24.0

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 63.0
margin_bottom = 54.0
text = "RESUME"

[node name="Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 63.0
margin_bottom = 84.0
text = "MENU"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 63.0
margin_bottom = 114.0
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
